# libertat-prueba-tecnica-ingeniero-ia

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: cumplimiento_pdf.md  decisiones_tecnicas.md  despliegue_easypanel.md  respuestas_teoricas.md  supabase_schema.sql
docs/evidencias/: demo_funcionamiento.webm
n8n/: flujo_webinar_libertat.json
scripts/: demo_run.py  export_hubspot_contacts.py  generate_answer_pdf.py  gmail_oauth_setup.py  sync_sqlite_to_supabase.py
src/libertat_webinar/: __init__.py  app.py  certificates.py  config.py  db.py  llm.py  notifier.py  quiz.py  schemas.py
src/libertat_webinar/templates/: base.html  dashboard.html  index.html  quiz.html  result.html
tests/: test_content_and_certificate.py  test_notifications.py  test_quiz.py  test_supabase_and_model_api.py  test_web_smoke.py
