[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "libertat-webinar-automatizacion"
version = "0.1.0"
description = "Mini-plataforma de automatización educativa para registros, quiz, notificaciones y constancias."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.9,<1",
    "pydantic>=2.7,<3",
    "email-validator>=2.1,<3",
    "reportlab>=4.2,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "httpx>=0.27,<1",
    "pypdf>=6.0,<7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
libertat_webinar = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
